k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: survey-app-service
  namespace: default
spec:
  selector:
    app: survey-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
